getPages moved to utils

--- a/src/layouts/Default.astro
+++ b/src/layouts/Default.astro
@@ -11,6 +11,11 @@ type Props = {
 }
 const { frontmatter, headings } = Astro.props as Props;
 
+import { globTest } from 'astro-accelerator-utils';
+
+const x = globTest;
+console.log('globtest', x);
+
 ---
 <Default frontmatter={ frontmatter } headings={ headings }>
     <slot />
