--- a/src/themes/accelerator/components/Related.astro
+++ b/src/themes/accelerator/components/Related.astro
@@ -1,9 +1,9 @@
 ---
 import { SITE, Frontmatter } from '@config';
 import type { MarkdownInstance } from 'astro';
-import { addSlashToAddress, isListable, sortByPubDateDesc } from 'astro-accelerator-utils';
+import { addSlashToAddress, isListable, sortByPubDateDesc, getPages } from 'astro-accelerator-utils';
 import { getImageInfo } from '@util/custom-markdown.mjs'
-import { getPages } from '@util/PageQueries';
+import { fetchPages } from '@util/PageQueries';
 
 import AuthorsMini from '@components/AuthorsMini.astro';
 
@@ -20,7 +20,7 @@ let posts: MarkdownInstance<Record<string, any>>[] = [];
 const parentCagory = (frontmatter.categories ?? [null])[0];
 
 if (parentCagory != null) {
-  const allPages = await getPages(isListable)
+  const allPages = await getPages(fetchPages, isListable)
   const allPosts = allPages
     .filter(p => p.frontmatter.title != frontmatter.title && p.frontmatter.categories && p.frontmatter.categories.includes(parentCagory))
     .sort(sortByPubDateDesc)
