--- a/src/pages/report/missing-meta.astro
+++ b/src/pages/report/missing-meta.astro
@@ -1,9 +1,9 @@
 ---
-import { sortByPubDateDesc } from 'astro-accelerator-utils';
-import { getPages } from '@util/PageQueries';
+import { sortByPubDateDesc, getPages } from 'astro-accelerator-utils';
+import { fetchPages } from '@util/PageQueries';
 
 // Logic
-const allPages = await getPages();
+const allPages = await getPages(fetchPages);
 const missingMeta = allPages.filter(p => (p.frontmatter.keywords == null || p.frontmatter.description == null) && p.frontmatter.layout != 'src/layouts/Redirect.astro');
 const pageCount = missingMeta.length;
 const pages = missingMeta.sort(sortByPubDateDesc).slice(0, Math.min(50, pageCount));
