--- a/src/pages/tag/[tag]/[page].astro
+++ b/src/pages/tag/[tag]/[page].astro
@@ -6,8 +6,7 @@ import { Translations, Lang } from '@util/Languages';
 import type { Page, MarkdownInstance } from 'astro';
 import { SITE, Frontmatter } from '@config';
 import { getPageLinks } from '@util/PageLinks';
-import { isListable, sortByPubDateDesc } from 'astro-accelerator-utils';
-import { getItem, setItem } from '@util/Cache';
+import { isListable, sortByPubDateDesc, getItem, setItem } from 'astro-accelerator-utils';
 import Default from 'src/layouts/Default.astro';
 import ArticleList from '@components/ArticleList.astro';
 import Paging from '@components/Paging.astro';
