v.0.0.28 move author queries to utils

--- a/src/themes/accelerator/components/Authors.astro
+++ b/src/themes/accelerator/components/Authors.astro
@@ -1,9 +1,9 @@
 ---
-import { Dates, Urls } from 'astro-accelerator-utils';
+import { Dates, Urls, PostQueries } from 'astro-accelerator-utils';
 import { SITE, Frontmatter } from '@config';
 import { Translations, Lang } from '@util/Languages';
-import { getAuthorList } from '@util/Authors';
 import { getImageInfo } from '@util/custom-markdown.mjs';
+import { fetchPages } from '@util/PageQueries';
 
 // Properties
 type Props = {
@@ -16,11 +16,12 @@ const { lang, frontmatter } = Astro.props as Props;
 const _ = Lang(lang);
 
 // Logic
-const authorList = await getAuthorList(frontmatter);
+const authorList = await PostQueries.getAuthors(fetchPages, frontmatter);
 
-const author = authorList.writers.slice(0, 1)[0];
-const authorImage = authorList?.image?.src ? getImageInfo(authorList.image.src, 'author-image', SITE.images.authorSize) : null;
-const contributors = authorList.writers.slice(1);
+// Get image info
+const authorImage = authorList?.image?.src 
+  ? getImageInfo(authorList.image.src, 'author-image', SITE.images.authorSize)
+  : null;
 ---
 {authorList.writers.length > 0 && 
 <div class="post-meta">
@@ -34,9 +35,9 @@ const contributors = authorList.writers.slice(1);
   }
   <div class="author-info">
     <span>{ _(Translations.post.written_by) }
-      {author &&
-        <a href={ Urls.addSlashToAddress(author.url, SITE) + '1/' } itemprop="author">{ author.frontmatter.title }</a>
-      }{contributors.map((writer) => (
+      {authorList.mainAuthor &&
+        <a href={ Urls.addSlashToAddress(authorList.mainAuthor.url, SITE) + '1/' } itemprop="author">{ authorList.mainAuthor.frontmatter.title }</a>
+      }{authorList.contributors.map((writer) => (
         <a href={ Urls.addSlashToAddress(writer.url, SITE) + '1/' } itemprop="contributor">{ writer.frontmatter.title }</a>
       ))}.
       <br /><time datetime={ frontmatter.pubDate.toString() } itemprop="datePublished">
