--- a/src/themes/accelerator/components/AuthorsMini.astro
+++ b/src/themes/accelerator/components/AuthorsMini.astro
@@ -2,7 +2,6 @@
 import { Dates, PostQueries } from 'astro-accelerator-utils';
 import { SITE, Frontmatter } from '@config';
 import { Translations, Lang } from '@util/Languages';;
-import { fetchPages } from '@util/PageQueries';
 
 // Properties
 type Props = {
@@ -15,7 +14,7 @@ const { lang, frontmatter } = Astro.props as Props;
 const _ = Lang(lang);
 
 // Logic
-const authorList = await PostQueries.getAuthors(fetchPages, frontmatter);
+const authorList = await PostQueries.getAuthors(frontmatter);
 ---
 {authorList.writers.length > 0 && 
 <div class="post-meta">
