--- a/src/pages/report/missing-banner.astro
+++ b/src/pages/report/missing-banner.astro
@@ -1,9 +1,8 @@
 ---
 import { PostQueries, PostOrdering } from 'astro-accelerator-utils';
-import { fetchPages } from '@util/PageQueries';
 
 // Logic
-const allPages = await PostQueries.getPages(fetchPages);
+const allPages = await PostQueries.getPages();
 const missingBanner = allPages.filter(p => p.frontmatter.bannerImage == null && p.frontmatter.layout != 'src/layouts/Redirect.astro');
 const pageCount = missingBanner.length;
 const pages = missingBanner.sort(PostOrdering.sortByPubDateDesc).slice(0, Math.min(50, pageCount));
