--- a/src/pages/report/missing-meta.astro
+++ b/src/pages/report/missing-meta.astro
@@ -1,9 +1,8 @@
 ---
 import { PostQueries, PostOrdering } from 'astro-accelerator-utils';
-import { fetchPages } from '@util/PageQueries';
 
 // Logic
-const allPages = await PostQueries.getPages(fetchPages);
+const allPages = await PostQueries.getPages();
 const missingMeta = allPages.filter(p => (p.frontmatter.keywords == null || p.frontmatter.description == null) && p.frontmatter.layout != 'src/layouts/Redirect.astro');
 const pageCount = missingMeta.length;
 const pages = missingMeta.sort(PostOrdering.sortByPubDateDesc).slice(0, Math.min(50, pageCount));
