--- a/src/themes/accelerator/layouts/Author.astro
+++ b/src/themes/accelerator/layouts/Author.astro
@@ -2,7 +2,6 @@
 import { PostQueries } from 'astro-accelerator-utils';
 import { SITE, Frontmatter } from '@config';
 import { Translations, Lang } from '@util/Languages';
-import { fetchPages } from '@util/PageQueries';
 import Default from './Default.astro';
 import ArticleList from '@components/ArticleList.astro';
 
@@ -18,7 +17,7 @@ const lang = frontmatter.lang ?? SITE.default.lang;
 const _ = Lang(lang);
 
 // Logic
-const authorPages = await PostQueries.getPages(fetchPages, p => p.frontmatter.authors?.indexOf(frontmatter.id) > -1)
+const authorPages = await PostQueries.getPages(p => p.frontmatter.authors?.indexOf(frontmatter.id) > -1)
 ---
 <Default frontmatter={ frontmatter } headings={ headings }>
     <slot />
