--- a/src/pages/authors/[author]/[page].astro
+++ b/src/pages/authors/[author]/[page].astro
@@ -2,12 +2,11 @@
 // warning: This file is overwritten by Astro Accelerator
 
 // For listing all articles in this folder
+import { Cache, PostFiltering, PostOrdering, PostQueries } from 'astro-accelerator-utils';
 import { Translations, Lang } from '@util/Languages';
 import type { Page, MarkdownInstance } from 'astro';
 import { SITE, Frontmatter } from '@config';
 import { getPageLinks } from '@util/PageLinks';
-import { Cache, PostFiltering, PostOrdering } from 'astro-accelerator-utils';
-import { getAuthorInfo } from '@util/PageQueries';
 import Default from '@layouts/Default.astro';
 import ArticleList from '@components/ArticleList.astro';
 import Paging from '@components/Paging.astro';
@@ -16,7 +15,7 @@ const lang = SITE.default.lang;
 const currentUrl = new URL(Astro.request.url);
 const slug = currentUrl.pathname.split('/')[2];
 
-let authorInfo = await getAuthorInfo(slug);
+let authorInfo = await PostQueries.getAuthorInfo(slug);
 
 const frontmatter = authorInfo.frontmatter as Frontmatter;
 
