--- a/src/themes/accelerator/components/NavigationItem.astro
+++ b/src/themes/accelerator/components/NavigationItem.astro
@@ -1,6 +1,6 @@
 ---
 import { SITE } from '@config';
-import type { NavPage } from '@util/NavigationTypes';
+import type { NavPage } from '@util/TempNavPage';
 import { Urls } from 'astro-accelerator-utils';
 
 // Properties
