--- a/src/themes/accelerator/components/Navigation.astro
+++ b/src/themes/accelerator/components/Navigation.astro
@@ -1,7 +1,8 @@
 ---
+import { Navigation } from 'astro-accelerator-utils';
 import { Translations, Lang } from '@util/Languages';
-import { getMenu } from '@util/Navigation';
 import NavigationItem from '@components/NavigationItem.astro';
+import { SITE } from '@config';
 
 // Properties
 type Props = {
@@ -14,7 +15,7 @@ const _ = Lang(lang);
 
 // Logic
 const currentUrl = new URL(Astro.request.url);
-const pages = await getMenu(currentUrl);
+const pages = await Navigation.getMenu(currentUrl, SITE);
 ---
 <nav class="site-nav" id="site-nav" aria-label={ _(Translations.aria.site_navigation) }>
   <h2 class="site-nav-title">{ _(Translations.navigation.title) }</h2>
