--- a/src/themes/accelerator/components/NavigationBar.astro
+++ b/src/themes/accelerator/components/NavigationBar.astro
@@ -2,6 +2,7 @@
 import { Navigation } from 'astro-accelerator-utils';
 import { Translations, Lang } from '@util/Languages';
 import { SITE } from '@config';
+import { menu } from '@data/navigation';
 
 // Properties
 type Props = {
@@ -14,7 +15,7 @@ const _ = Lang(lang);
 
 // Logic
 const currentUrl = new URL(Astro.request.url);
-const pages = await Navigation.getMenu(currentUrl, SITE);
+const pages = await Navigation.getMenu(currentUrl, SITE, menu);
 ---
 <nav class="site-nav-bar" id="site-nav" aria-label={ _(Translations.aria.site_navigation) }>
   <h2 class="site-nav-title">{ _(Translations.navigation.title) }</h2>
